tests/spec/fail/try_recv_fallback_mismatch.aja
ch = chan()
send(ch, 1)
recv(ch)
tryRecv(ch, "x")
